Include some alert

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -210,7 +210,7 @@
     cursor: pointer; }
 
 .alert-error-box {
-  z-index: 2000;
+  z-index: 9999999999;
   position: fixed;
   top: 90vh;
   left: 1vw;
