--- a/src/scss/profile/home.scss
+++ b/src/scss/profile/home.scss
@@ -374,7 +374,7 @@
           overflow-x: auto;
           // overflow-x: hidden;
           .song-empty {
-            width: calc(14vw);
+            min-width: calc(14vw);
             height: calc(14vw);
             display: flex;
             justify-content: center;
@@ -900,7 +900,7 @@
           overflow-x: auto;
           // overflow-x: hidden;
           .song-empty {
-            width: calc(35vw);
+            min-width: calc(35vw);
             height: calc(35vw);
             display: flex;
             justify-content: center;
